--- a/README
+++ b/README
@@ -4,3 +4,5 @@ Go to Extensions (chrome://extensions/)
 Check the Developer Mode checkbox
 Click the Load Unpacked Extension 
 Select the Folder Debuggergator
+
+See Public Backlog: https://www.pivotaltracker.com/n/projects/1666925
